<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:text="@string/stille_modus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxStilleModus" />

    <CheckBox
        android:text="@string/trillen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxTrillen" />

    <Button
        android:text="@string/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openVolumeActivity" />
</LinearLayout>